Fix bug on quick start

--- a/quick_start.ipynb
+++ b/quick_start.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor_data = st.loadTensor(path = \"inputData/example_time.tensor\", \n",
+    "tensor_data = st.loadTensor(path = \"inputData/ecg_timeseries_small.zip\", sep=' ',\n",
     "                            col_types = [float, float, float])\n",
     "\n",
     "# 1-D DTensor for time ticks, and multi-dimensional array DTensor for multivariate time series\n",
