--- a/graph_start.ipynb
+++ b/graph_start.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Temporarily unavailable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Load tensor"
    ]
   },
@@ -20,15 +13,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spartan as st\n",
-    "data = st.loadTensor(name=\"yelp\", path=\"~/Data/\", col_ids = [\"uid\", \"oid\", \"rating\"], col_types = [int, int, int])"
+    "import sys\n",
+    "sys.path.insert(0,\"../spartan2\")\n",
+    "import spartan as st\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(st.__file__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if col_types is not given, the types will be inferred.\n",
+    "# if col_idx is not given, all columns will be used in original order.\n",
+    "tensor_data = st.loadTensor(path = \"./inputData/yelp.tensor.gz\", header=None, \n",
+    "                            col_idx=[0,1,2,3,4], col_types=[int,int,str,int,int])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate sparse tensor\n",
+    "stensor = tensor_data.toSTensor(hasvalue=True, mappers={2:st.TimeMapper(timeformat='%Y-%m-%d')})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = st.Graph(stensor, bipartite=True, weighted=True, modet=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edgelist = graph.get_edgelist_array()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# degree"
+    "## degree"
    ]
   },
   {
@@ -38,15 +81,30 @@
    "outputs": [],
    "source": [
     "# count degree\n",
-    "Du, Dv = st.bidegree(data)\n",
-    "# D = st.degree(data)"
+    "rdegrees, cdegrees = graph.degrees()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Count triangles"
+    "### draw degree distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tbd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count triangles"
    ]
   },
   {
@@ -56,20 +114,18 @@
    "outputs": [],
    "source": [
     " # create triangle count model\n",
-    "trimodel = st.triangle_count.create(data, st.tc_policy.DOULION, \"my_doulion_model\")\n",
-    "\n",
+    "#tbd\n",
     " # run the model by default set undirected for graphs\n",
-    "trimodel.run(p=0.8)\n",
-    "\n",
+    "#tbd\n",
     " # show the results\n",
-    "trimodel.showResults(plot=True)"
+    "#tbd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Subgraph"
+    "## Subgraph"
    ]
   },
   {
@@ -78,15 +134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = st.subgraph(data, A, B)\n",
-    "# g = st.subgraph(data, A)"
+    "#tbd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Eigen decomposition"
+    "## graph spectrum"
    ]
   },
   {
@@ -96,36 +151,13 @@
    "outputs": [],
    "source": [
     "# create a eigen decomposition model\n",
-    "edmodel = st.eigen_decompose.create(data, st.ed_policy.SVDS, \"my_svds_model\")\n",
+    "#tbd\n",
     "\n",
     "# run the model\n",
-    "edmodel.run(k=10)\n",
+    "#tbd\n",
     "\n",
     "# show the result\n",
-    "edmodel.showResults()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Anomaly detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " # create a anomaly detection model\n",
-    "hsmodel = st.anomaly_detection.create(data, st.ad_policy.HOLOSCOPE, \"my_holoscope_model\")\n",
-    "\n",
-    " # run the model\n",
-    "hsmodel.run(k=3)\n",
-    "\n",
-    " # show the results\n",
-    "hsmodel.showResults()"
+    "#tbd\n"
    ]
   }
  ],
@@ -146,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   },
   "mimetype": "text/x-python",
   "name": "python",
