--- a/Fraudar_demo.ipynb
+++ b/Fraudar_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Temporarily unavailable"
+    "# Fraudar_demo"
    ]
   },
   {
@@ -13,17 +13,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spartan2.spartan as st"
+    "import sys\n",
+    "sys.path.insert(0, \"/Users/endlesslethe/PycharmProjects/spartan2\")\n",
+    "\n",
+    "import spartan as st"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# set the computing engine\n",
-    "st.config(st.engine.SINGLEMACHINE)"
+    "Using backend cpu"
    ]
   },
   {
@@ -33,16 +33,8 @@
    "outputs": [],
    "source": [
     "# load graph data\n",
-    "tensor = st.loadTensor(name = \"example\", path = \"inputData/\", col_types = [int, int], hasvalue=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph = tensor.toGraph()"
+    "tensor = st.loadTensor(path = \"inputData/example.tensor\", col_types = [int, int])\n",
+    "stensor = tensor.toSTensor(hasvalue=False)"
    ]
   },
   {
@@ -52,7 +44,7 @@
    "outputs": [],
    "source": [
     "# create a anomaly detection model\n",
-    "admodel = st.anomaly_detection.create(graph, st.ad_policy.FRAUDAR, \"my_fraudar_model\")"
+    "fd = st.Fraudar(stensor)"
    ]
   },
   {
@@ -62,15 +54,20 @@
    "outputs": [],
    "source": [
     "# run the model\n",
-    "admodel.run()"
+    "fd.run()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "finished computing weight matrix  \n",
+    "finished setting up greedy  \n",
+    "finished setting deltas  \n",
+    "finished building min trees  \n",
+    "(({0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}, {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}), 3.0490293632985193)  \n",
+    "score obtained is  3.0490293632985193"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
