--- a/DPGS.ipynb
+++ b/DPGS.ipynb
@@ -1,24 +1,34 @@
 {
  "cells": [
   {
+   "source": [
+    "# DPGS: Degree-Preserving Graph Summarization\n",
+    "\n",
+    "DPGS is a graph summarization method using a reconstruction scheme based on configuration model. \n",
+    "\n",
+    "Due to the degree-perservation property, DPGS is able to keep the spectra of Laplacian matrix."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# Remember to add spartan to you PATH\n",
     "import spartan as st"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import scipy.sparse as ssp"
-   ]
+    "Load example data:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -45,6 +55,22 @@
    ]
   },
   {
+   "source": [
+    "Convert tensor to graph:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = st.Graph(tensor)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,8 +85,15 @@
    },
    "outputs": [],
    "source": [
-    "summa = st.Summarize(tensor)"
+    "model = st.DPGS(graph)"
    ]
+  },
+  {
+   "source": [
+    "Run the algorithm and obtain the adjacency matrix of summary graph as return value:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -70,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "res = summa.run(T=5)"
+    "adj_s = model.run(T=5)"
    ]
   },
   {
@@ -81,6 +114,13 @@
    ]
   },
   {
+   "source": [
+    "Run the algorithm and obtain the adjacency matrix of summary graph as return value:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -88,16 +128,9 @@
    },
    "outputs": [],
    "source": [
-    "model = st.Summarization.create(tensor, st.SumPolicy.Summarize, 'summarize')\n",
-    "model.run(T=5)"
+    "task = st.Summarization.create(graph, st.SumPolicy.DPGS, 'DPGS')\n",
+    "adj_s = task.run(T=5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
