--- a/Fraudar_demo.ipynb
+++ b/Fraudar_demo.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# load graph data\n",
-    "tensor = st.loadTensor(path = \"inputData/example.tensor\", col_types = [int, int])\n",
+    "tensor = st.loadTensor(path = \"inputData/plain_graph_small.zip\", col_types = [int, int])\n",
     "stensor = tensor.toSTensor(hasvalue=False)"
    ]
   },
