--- a/Fraudar.ipynb
+++ b/Fraudar.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "# load graph data\n",
-    "tensor = st.loadTensor(path = \"inputData/plain_graph_small.zip\", col_types = [int, int])\n",
+    "tensor = st.loadTensor(path = \"inputData/example.tensor.zip\", col_types = [int, int], sep=' ')\n",
+    "\n",
     "stensor = tensor.toSTensor(hasvalue=False)"
    ]
   },
