--- a/Fraudar.ipynb
+++ b/Fraudar.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# load graph data\n",
-    "tensor = st.loadTensor(path = \"inputData/example.tensor.zip\", col_types = [int, int], sep=' ')\n",
+    "tensor = st.loadTensor(path = \"inputData/plain_graph_small.zip\", col_types = [int, int], sep=' ')\n",
     "\n",
     "stensor = tensor.toSTensor(hasvalue=False)"
    ]
@@ -84,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
