--- a/FlowScope.ipynb
+++ b/FlowScope.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = st.FlowScope(step2list, alpha=4)"
+    "fs = st.FlowScope(step2list)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = fs.run(k=3)"
+    "res = fs.run(k=3, alpha=4)"
    ]
   },
   {
