--- a/FlowScope.ipynb
+++ b/FlowScope.ipynb
@@ -104,7 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sparse tensor \"fs1_stensor\" and \"fs2_stensor\" is a two-mode constructed from tensor_data. source account id, destination account id and money are all mapped into $[0, N]$ integers. \\ fs1_stensor in this example  constructs a tensor of $1334 \\times 3430 $, and fs2_stensor in this example  constructs a tensor of $2203 \\times 1909 $."
+    "Sparse tensors \"fs1_stensor\" and \"fs2_stensor\" are matrices constructed from tensor_data. The amounts of money are elements in those matrices.\n",
+    "\n",
+    "The size of fs1_stensor in this example is $1334 \\times 3430 $, and the size of fs2_stensor is $2203 \\times 1909 $."
    ]
   },
   {
@@ -122,7 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the shape of two stensors, make sure they have the same size in middle dimension. \\In this case, the middle dimension is resize to $3430$"
+    "Change the shape of two stensors, make sure they have the same size in middle dimension.\n",
+    "\n",
+    "In this case, those matrices have sizes of $1334 \\times 3430$ and $3430 \\times 1909$"
    ]
   },
   {
@@ -139,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get Graph instances from sparse tensors."
+    "Get graph instances from sparse tensors."
    ]
   },
   {
@@ -157,14 +161,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Graph list, and add Graphs in order"
+    "Create a graph list, and add graphs in order"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run holoscope as a single model"
+    "### Run FlowScope as a single model"
    ]
   },
   {
@@ -196,7 +200,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Default parameters are: {'alpha': '4'} \\ alpha is equivalent to $\\lambda$ in the paper"
+    "Default parameters are: {'alpha': '4'}\n",
+    "\n",
+    "alpha is equivalent to $\\lambda$ in the paper"
    ]
   },
   {
@@ -212,8 +218,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "k is the number of blocks you want to detect.\n",
-    "res is a list of each block. Each block constains [[detected node in each partite], score]"
+    "$k$ is the number of blocks you want to detect.\n",
+    "\n",
+    "$res$ is a list of each block. Each block constains [[detected nodes in each partite], score]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run FlowScope from anomaly detection task"
    ]
   },
   {
@@ -240,7 +254,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The results is a list of top-k suspicious blocks. Each block constains [[detected node in each partite], score] \\ Then we can visualize the subgraphs as follows."
+    "The results is a list of top-k suspicious blocks. Each block constains [[detected nodes in each partite], score]\n",
+    "\n",
+    "Then we can visualize the subgraphs as follows."
    ]
   },
   {
@@ -300,23 +316,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cite:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Cite:\n",
     "------\n",
-    "1. Li, Xiangfeng, Shenghua Liu, Zifeng Li, Xiaotian Han, Chuan Shi, Bryan Hooi, He Huang, and Xueqi Cheng. \"FlowScope: Spotting Money Laundering Based on Graphs.\" In AAAI, pp. 4731-4738. 2020."
+    "1. Li, Xiangfeng, Shenghua Liu, Zifeng Li, Xiaotian Han, Chuan Shi, Bryan Hooi, He Huang, and Xueqi Cheng. \"FlowScope: Spotting Money Laundering Based on Graphs.\" In AAAI, pp. 4731-4738. 2020.\n",
+    "<details>\n",
+    "    <summary><span style=\"color:blue\">click for BibTex...</span></summary>\n",
+    "\n",
+    "    ```bibtex\n",
+    "    @inproceedings{li2020flowscope,\n",
+    "      title={FlowScope: Spotting Money Laundering Based on Graphs.},\n",
+    "      author={Li, Xiangfeng and Liu, Shenghua and Li, Zifeng and Han, Xiaotian and Shi, Chuan and Hooi, Bryan and Huang, He and Cheng, Xueqi},\n",
+    "      booktitle={AAAI},\n",
+    "      pages={4731--4738},\n",
+    "      year={2020}\n",
+    "    }\n",
+    "    ```\n",
+    "    </details>  "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -328,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
