--- a/Holoscope.ipynb
+++ b/Holoscope.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run holoscope as a single model"
+    "### Run HoloScope as a single model"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
