Update DPGS notebook

--- a/DPGS.ipynb
+++ b/DPGS.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "source": [
-    "# DPGS: Degree-Preserving Graph Summarization\n",
+    "## DPGS: Degree-Preserving Graph Summarization\n",
     "\n",
-    "DPGS is a graph summarization method using a reconstruction scheme based on configuration model. \n",
+    "DPGS is a graph summarization method using a reconstruction scheme based on configuration model. To find a good summary, DPGS adopts MDL (Minimum Description Length) principle and uses a greedy algorithm to merge node pairs.\n",
     "\n",
-    "Due to the degree-perservation property, DPGS is able to keep the spectra of Laplacian matrix."
+    "Due to the degree-perservation property, DPGS is able to keep the spectra of Laplacian matrix.\n",
+    "\n",
+    "<img src=\"./images/DPGS_reconstruction.png\" alt=\"drawing\" width=\"50%\"/>\n",
+    "\n",
+    "### Abstract\n",
+    "\n",
+    "Given a large graph, how can we summarize it with fewer nodes and edges while maintaining its key properties? As a solution, graph summarization, which aims to find a compact representation of the given graph and minimizes the reconstruction error, has received much attention, and numerous methods have been developed for it. However, most of the existing works adopt the uniform reconstruction scheme, which is based on an unrealistic assumption that edges are uniformly distributed. In this work, we propose a novel and realistic reconstruction scheme, which preserves the degree of nodes, and we develop an efficient graph summarization method called DPGS based on the Minimum Description Length principle. We theoretically show that the minimized reconstruction error of the summary graph can bound the perturbation of graph spectral information. Extensive experiments on real-world datasets show that DPGS yields more accurate summary graphs, and we can effectively train a graph neural network (GNN) on a much smaller summary graph for original node classification.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -131,6 +137,42 @@
     "task = st.Summarization.create(graph, st.SumPolicy.DPGS, 'DPGS')\n",
     "adj_s = task.run(T=5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### Experimental results\n",
+    "\n",
+    "DPGS obtains shorter encoding length.\n",
+    "\n",
+    "<img src=\"./images/DPGS_MDL.png\" alt=\"drawing\" width=\"50%\"/>\n",
+    "\n",
+    "DPGS for GNN training.\n",
+    "\n",
+    "<img src=\"./images/DPGS_GNN.png\" alt=\"drawing\" width=\"25%\"/>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Cite\n",
+    "\n",
+    "Houquan Zhou, Shenghua Liu, Kyuhan Lee, Kijung Shin, Huawei Shen and Xueqi Cheng. \"DPGS: Degree-Preserving Graph Summarization.\" In SDM 2021.\n",
+    "\n",
+    "\n",
+    "### Code\n",
+    "\n",
+    "The source code of DPGS can be found at [github repository](https://github.com/HQJo/DPGS)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
