--- a/FlowScope.ipynb
+++ b/FlowScope.ipynb
@@ -35,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import spartan as st"
@@ -115,9 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxsize = max(fs1_stensor.shape[1], fs2_stensor.shape[0])\n",
-    "fs1_stensor.shape = (fs1_stensor.shape[0], maxsize)\n",
-    "fs2_stensor.shape = (maxsize, fs2_stensor.shape[1])"
+    "maxshape = max(fs1_stensor.shape[1], fs2_stensor.shape[0])\n",
+    "fs1_stensor.shape = (fs1_stensor.shape[0], maxshape)\n",
+    "fs2_stensor.shape = (maxshape, fs2_stensor.shape[1])"
    ]
   },
   {
@@ -211,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = fs.run(k=3, alpha=4)"
+    "res = fs.run(k=3, alpha=4,maxsize=(10,10,10))"
    ]
   },
   {
@@ -247,13 +245,19 @@
    "source": [
     "# run the model\n",
     "#default k=3, alpha=4\n",
-    "res = ad_model.run(k=3)"
+    "res = ad_model.run(k=3,alpha=4,maxsize=(-1,-1,100))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$maxsize$ is the block size limit.\n",
+    "\n",
+    "$maxsize$ can be an integer (-1 or positive), and $maxsize==-1$ means no size limit.\n",
+    "\n",
+    "$maxsize$ can be a tuple which contains the node size limit for each dimension of the block. Similarly, each element of $maxsize$ should be an integer (-1 or positive).\n",
+    "\n",
     "The results is a list of top-k suspicious blocks. Each block constains [[detected nodes in each partite], score]\n",
     "\n",
     "Then we can visualize the subgraphs as follows."
@@ -337,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python37",
    "language": "python",
-   "name": "python3"
+   "name": "python37"
   },
   "language_info": {
    "codemirror_mode": {
@@ -351,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
