add maxsize arg

--- a/Fraudar.ipynb
+++ b/Fraudar.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import spartan as st"
    ]
   },
@@ -48,11 +49,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# run the model\n",
-    "fd.run()"
+    "fd.run(k=2, maxsize=[100, 100])"
    ]
   },
   {
@@ -63,8 +66,15 @@
     "finished setting up greedy  \n",
     "finished setting deltas  \n",
     "finished building min trees  \n",
-    "(({0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}, {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}), 3.0490293632985193)  \n",
-    "score obtained is  3.0490293632985193"
+    "Fraudar iter 0 finished.\n",
+    "score obtained is  3.0490293632985193\n",
+    "\n",
+    "finished computing weight matrix\n",
+    "finished setting up greedy\n",
+    "finished setting deltas\n",
+    "finished building min trees\n",
+    "Fraudar iter 1 finished.\n",
+    "score obtained is  0.4185829699133876"
    ]
   }
  ],
