--- a/CubeFlow.ipynb
+++ b/CubeFlow.ipynb
@@ -15,6 +15,8 @@
    "outputs": [],
    "source": [
     "# Remember to add spartan to you PATH\n",
+    "import sys\n",
+    "sys.path.append(\"/<dir to spartan2>/spartan2\")\n",
     "import spartan as st"
    ]
   },
@@ -117,7 +119,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the algorithm and obtain two dense blocks as return value:"
+    "**Run the algorithm and obtain two dense blocks as return value:**\n",
+    "\n",
+    "$maxsize$ is the block size limit.\n",
+    "\n",
+    "$maxsize$ can be an integer (-1 or positive), and $maxsize==-1$ means no size limit.\n",
+    "\n",
+    "$maxsize$ can be a tuple which contains the node size limit for each dimension of the block. Similarly, each element of $maxsize$ should be an integer (-1 or positive).\n",
+    "\n",
+    "The results is a list of top-k suspicious blocks. Each block constains [[detected nodes in each partite], score]"
    ]
   },
   {
@@ -126,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = cf.run()"
+    "res = cf.run(del_type=1, maxsize=(-1,-1,-1))"
    ]
   },
   {
