modify maxsize arg

--- a/CubeFlow.ipynb
+++ b/CubeFlow.ipynb
@@ -16,7 +16,8 @@
    "source": [
     "# Remember to add spartan to you PATH\n",
     "import sys\n",
-    "sys.path.append(\"/<dir to spartan2>/spartan2\")\n",
+    "sys.path.append(\"D:\\PPProject\\spartan-BGT-M\\spartan2\")\n",
+    "# sys.path.append(\"/<dir to spartan2>/spartan2\")\n",
     "import spartan as st"
    ]
   },
@@ -125,7 +126,7 @@
     "\n",
     "$maxsize$ can be an integer (-1 or positive), and $maxsize==-1$ means no size limit.\n",
     "\n",
-    "$maxsize$ can be a tuple which contains the node size limit for each dimension of the block. Similarly, each element of $maxsize$ should be an integer (-1 or positive).\n",
+    "$maxsize$ can be a tuple which contains the node size limit for each dimension of the block, e.g.,(5,10,5). Similarly, each element of $maxsize$ should be an integer (-1 or positive).\n",
     "\n",
     "The results is a list of top-k suspicious blocks. Each block constains [[detected nodes in each partite], score]"
    ]
@@ -136,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = cf.run(del_type=1, maxsize=(-1,-1,-1))"
+    "res = cf.run(del_type=1, maxsize=-1)"
    ]
   },
   {
