modify maxsize arg

--- a/CubeFlow.ipynb
+++ b/CubeFlow.ipynb
@@ -16,8 +16,7 @@
    "source": [
     "# Remember to add spartan to you PATH\n",
     "import sys\n",
-    "sys.path.append(\"D:\\PPProject\\spartan-BGT-M\\spartan2\")\n",
-    "# sys.path.append(\"/<dir to spartan2>/spartan2\")\n",
+    "sys.path.append(\"/<dir to spartan2>/spartan2\")\n",
     "import spartan as st"
    ]
   },
