Update spec greedy demo.

--- a/Specgreedy.ipynb
+++ b/Specgreedy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Specgreedy_demo"
+    "# SpecGreedy_demo"
    ]
   },
   {
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# create a anomaly detection model\n",
-    "sg = st.Specgreedy(stensor)"
+    "sg = st.SpecGreedy(stensor)"
    ]
   },
   {
