--- a/graph_start.ipynb
+++ b/graph_start.ipynb
@@ -107,7 +107,7 @@
     "# msg degree dist\n",
     "uniqued, fod = graph.degree_dist(axis=0)\n",
     "# draw the dist\n",
-    "figmsg = st.plot_dist(uniqued, fod, 'user degree', 'freq')\n",
+    "figmsg = st.plot_dist(uniqued, fod, 'msg degree', 'freq')\n",
     "figuser.show()"
    ]
   },
