--- a/quick_start.ipynb
+++ b/quick_start.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "## I/O: Load orginal data as st.TensorData object\n",
-    "(warning: Data from real-world data base usually need to remap those IDs into index from 0 to n. The following examples have already been remapped. )"，
+    "(warning: Data from real-world data base usually need to remap those IDs into index from 0 to n. The following examples have already been remapped. )",
     "    Two way to load orignal data\n",
     "    - use pandas package\n",
     "    - use build-in st.loadTensor interface, which support pandas-like parameters\n",
