add comments of eaglemine

--- a/EagleMine.ipynb
+++ b/EagleMine.ipynb
@@ -235,6 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# note：make usre ./output dir has been manually created\n",
     "outpath = \"./output/\"\n",
     "outs_histogram = outpath + \"histogram.out\"\n",
     "outs_node2hcel = outpath + \"node2hcel.out\"\n",
@@ -285,6 +286,7 @@
    },
    "outputs": [],
    "source": [
+    "# note：make usre ./output dir has been manually created\n",
     "outpath = \"./output/\"\n",
     "eaglemine.run(outs=outpath, waterlevel_step=0.2, prune_alpha=0.80, min_pts=20, strictness=3, verbose=True)"
    ]
@@ -361,10 +363,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "infn_histogram = inpath + \"histogram.out\"  # outpath + \"histogram.out\" # \n",
+    "infn_histogram = outpath + \"histogram.out\"  # inpath + \"histogram.out\" # \n",
     "hist_shape, ticks_dims, hist_arr = st.loadHistogram(infn_histogram)\n",
     "hist_spm = csr_matrix((hist_arr[:, -1], (hist_arr[:, 0], hist_arr[:, 1])), shape=hist_shape, dtype=int)"
    ]
@@ -454,7 +458,23 @@
     "    ```\n",
     "    </details>\n",
     "    \n",
-    "2. TBD."
+    "2. Wenjie Feng, Shenghua Liu, Christos Faloutsos, Bryan Hooi, Huawei Shen, and Xueqi Cheng. EagleMine: Vision-guided Micro-clusters recognition and collective anomaly detection , Future Generation Computer Systems, Vol 115, Feb 2021, pp.236-250.\n",
+    "\n",
+    "    <details>\n",
+    "    <summary><span style=\"color:blue\">click for BibTex...</span></summary>\n",
+    "    \n",
+    "    ```bibtex\n",
+    "    @article{feng2021eaglemine,\n",
+    "      title={EagleMine: Vision-guided Micro-clusters recognition and collective anomaly detection},\n",
+    "      author={Feng, Wenjie and Liu, Shenghua and Faloutsos, Christos and Hooi, Bryan and Shen, Huawei and Cheng, Xueqi},\n",
+    "      journal={Future Generation Computer Systems},\n",
+    "      volume={115},\n",
+    "      pages={236--250},\n",
+    "      year={2021},\n",
+    "      publisher={Elsevier}\n",
+    "    }\n",
+    "    ```\n",
+    "    </details>"
    ]
   },
   {
@@ -481,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "pycharm": {
    "stem_cell": {
