--- a/quick_start.ipynb
+++ b/quick_start.ipynb
@@ -59,7 +59,7 @@
     "#use pandas\n",
     "import pandas as pd\n",
     "data = pd.read_csv('./inputData/yelp.edgelist.gz', sep=' ', header=None, dtype={1:int, 2:int, 3:int})\n",
-    "tensor_data = st.TensorData(data)\n"
+    "tensor_data = st.TensorData(data)"
    ]
   },
   {
@@ -234,14 +234,14 @@
    "metadata": {},
    "source": [
     "Or, map column into indices and then construct STensor. \n",
-    "    ```python\n",
+    "```python\n",
     "        # load a new tensor data\n",
     "        #tensor_data = st.loadTensor(...)\n",
     "        # separately do map\n",
     "        coords, data = tensor_data.do_map(hasvalue=True, mappers={2:st.TimeMapper(timeformat='%Y-%m-%d')})\n",
     "        # construct stensor\n",
     "        stensor = st.STensor((coords.T, data))\n",
-    "    ```"
+    "```"
    ]
   },
   {
